crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__this__nested_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/nested_class.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Outer (global @1)
      (method method [(cell this @0)] [None]
         (block
            (print (cell this @0))
            (fun f (local @1) [] [Some(0)]
               (block
                  (print (cell this @0))
                  (class Inner (local @0)
                     (method method [(local this @0)] []
                        (block
                           (print (local this @0)))))
                  (expr (call +1 (attr (call +1 (local Inner @0)) method)))))
            (expr (call +2 (local f @1))))))
   (expr (call +2 (attr (call +2 (global Outer @1)) method))))

----- stderr -----
