crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__this__this_in_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/this_in_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅
      (method bar [(local this @0)] []
         (block
            (return (local this @0))))
      (method baz [(local this @0)] []
         (block
            (return "baz"))))
   (print (call +2 (attr (call +2 (attr (call +2 (global Foo @1)) bar)) baz))))

----- stderr -----
